# keepalived

./: .data.c.swp  .gitignore  .indent.pro  .travis.yml  :  AUTHOR  AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTORS  ChangeLog  Dockerfile  Dockerfile.in  INSTALL  Makefile  Makefile.am  Makefile.in  README  README.kernel_versions  README.md  SECURITY.md  TODO  VERSION  aclocal.m4  autoconf  autogen.sh  build_setup  cfreader.c  cfreader.h  check.h  check_api.c  check_api.h  check_ci.c  check_ci.h  check_http.c  check_http.h  check_misc.c  check_misc.h  check_ssl.c  check_ssl.h  check_tcp.c  (+83 more)
bin_install/: Makefile.am  Makefile.in
doc/: KEEPALIVED-MIB  KEEPALIVED-MIB.txt  Makefile  Makefile.am  Makefile.in  NOTES  NOTE_vrrp_vmac.txt  README.sphinx  VRRPv3-MIB.txt  keepalived.conf.SYNOPSIS  keepalived.conf.SYNOPSIS.new
doc/doc.play/: conf.py  genhash.rst  index.rst  vertopal.com_keepalived.conf.rst  vertopal.com_keepalived.rst
doc/samples/: bypass_ipvs.sh  keepalived.conf.HTTP_GET.auth  keepalived.conf.HTTP_GET.auth.simple  keepalived.conf.HTTP_GET.port  keepalived.conf.IPv6  keepalived.conf.PING_CHECK  keepalived.conf.SMTP_CHECK  keepalived.conf.SSL_GET  keepalived.conf.UDP_CHECK  keepalived.conf.ci-linux  keepalived.conf.conditional_conf  keepalived.conf.fwmark  keepalived.conf.inhibit  keepalived.conf.misc_check  keepalived.conf.misc_check_arg  keepalived.conf.quorum  keepalived.conf.routes  keepalived.conf.sample  keepalived.conf.status_code  keepalived.conf.track_interface  keepalived.conf.virtual_server_group  keepalived.conf.virtualhost  keepalived.conf.vrrp  keepalived.conf.vrrp.localcheck  keepalived.conf.vrrp.lvs_syncd  keepalived.conf.vrrp.routes  keepalived.conf.vrrp.rules  keepalived.conf.vrrp.scripts  keepalived.conf.vrrp.static_ipaddress  keepalived.conf.vrrp.sync  keepalived.service.d.auth_hmac.conf  sample.misccheck.postgresql.sh  sample.misccheck.smbcheck.sh  sample_notify_fifo.sh
doc/source/: about.rst  case_study_failover.rst  case_study_healthcheck.rst  case_study_mixing.rst  conf.py  configuration_synopsis.rst  configuration_sysnopsis.rst  index.rst  installing_keepalived.rst  introduction.rst  license.rst  load_balancing_techniques.rst  programs_synopsis.rst  protocol_support.rst  scheduling_algorithms.rst  snmp_support.rst  software_design.rst  terminology.rst  todo.rst
genhash/: .gitignore  AUTHOR  AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  README  TODO  client.c  client.h  common.c  common.h  genhash.c  genhash.h  hash.h  http.c  http.h  layer4.c  layer4.h  main.c  main.h  sock.c  sock.h  ssl.c  ssl.crt  ssl.csr  ssl.h  ssl.key  ssl.pem
genhash/include/: hash.h  http.h  layer4.h  main.h  sock.h  ssl.h
keepalived/: .gitignore  Makefile  Makefile.am  Makefile.in  cfreader.c  cfreader.h  httpget.c  httpget.h  icmpcheck.c  icmpcheck.h  iputils.c  iputils.h  ipvswrapper.c  ipvswrapper.h  keepalived-non-root.service.in  keepalived.c  keepalived.config-opts.in  keepalived.h  keepalived.service  keepalived.service.in  main.c  tcpcheck.c  tcpcheck.h  utils.c  utils.h
keepalived/bfd/: Makefile.am  Makefile.in  bfd.c  bfd_daemon.c  bfd_data.c  bfd_event.c  bfd_fuse.c  bfd_parser.c  bfd_scheduler.c
keepalived/check/: Makefile.am  Makefile.in  check_api.c  check_bfd.c  check_ci.c  check_daemon.c  check_data.c  check_dns.c  check_file.c  check_fuse.c  check_genhash.c  check_http.c  check_misc.c  check_nftables.c  check_parser.c  check_ping.c  check_print.c  check_smtp.c  check_snmp.c  check_ssl.c  check_tcp.c  check_udp.c  ipfwwrapper.c  ipvswrapper.c  ipwrapper.c  ipwrapper.c.TODO  libipvs.c
keepalived/core/: Makefile.am  Makefile.in  config_notify.c  core_fuse.c  daemon.c  data.c  global_data.c  global_parser.c  keepalived_netlink.c  keepalived_netlink.c.new  layer4.c  libnl_link.c  list.c  main.c  memory.c  namespaces.c  nftables.c  parser.c  pidfile.c  process.c  reload_monitor.c  sanitizer.c  scheduler.c  smtp.c  snmp.c  status_socket.c  systemd.c  timer.c  track_process.c  utils.c  vector.c
keepalived/dbus/: .gitignore  Makefile.am  Makefile.in  org.keepalived.Vrrp1.Instance.xml  org.keepalived.Vrrp1.Vrrp.xml_template  org.keepalived.Vrrp1.conf
keepalived/etc/: .gitignore  Makefile.am  Makefile.in  lvs.conf
keepalived/haproxy/: haproxy.conf
keepalived/healthcheck/: Makefile  Makefile.in  check_api.c  check_ci.c  check_daemon.c  check_data.c  check_http.c  check_misc.c  check_parser.c  check_ssl.c  check_tcp.c  ipfwwrapper.c  ipvswrapper.c  ipwrapper.c
keepalived/include/: bfd.h  bfd_daemon.h  bfd_data.h  bfd_event.h  bfd_fuse.h  bfd_parser.h  bfd_scheduler.h  check_api.h  check_bfd.h  check_ci.h  check_daemon.h  check_data.h  check_dns.h  check_file.h  check_fuse.h  check_genhash.h  check_http.h  check_misc.h  check_nftables.h  check_parser.h  check_ping.h  check_print.h  check_smtp.h  check_snmp.h  check_ssl.h  check_tcp.h  check_udp.h  config.h.in  config_notify.h  core_fuse.h  daemon.h  data.h  global_data.h  global_json.h  global_parser.h  ip_vs.h  ipfwwrapper.h  ipvswrapper.h  ipwrapper.h  keepalived_netlink.h  (+61 more)
keepalived/libipfwc/: Makefile  Makefile.in  ipfwc_kernel_headers.h  libipfwc.c  libipfwc.h
keepalived/libipvs/: Makefile  Makefile.in  ip_vs.h  libipvs.c  libipvs.h
keepalived/libipvs-2.4/: Makefile  Makefile.in  libipvs.c  libipvs.h
keepalived/libipvs-2.6/: Makefile.in  ip_vs.h  ip_vs_nl_policy.c  libipvs.c  libipvs.h
keepalived/samples/: client.pem  keepalived.conf.HTTP_GET.port  keepalived.conf.SSL_GET  keepalived.conf.SYNOPSIS  keepalived.conf.misc_check  keepalived.conf.sample  keepalived.conf.status_code  (+1 more)
lib/: .gitignore  Makefile.am  Makefile.in  align.h  assert.c  assert_debug.h  bitops.h  buffer.c  buffer.h  command.c  command.h  config.h.in  config_warnings.h.in  container.h  fuse_interface.c  fuse_interface.h  fuse_log.c  fuse_log.h  html.c  html.h  json_writer.c  json_writer.h  keepalived_magic.h  list.c  list.h  list_head.c  list_head.h  logger.c  logger.h  memory.c  memory.h  notify.c  notify.h  old_socket.c  old_socket.h  parser.c  parser.c.rej  parser.h  process.c  process.h  (+26 more)
(+240 files in other folders)
